--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-/* ------- geral ----------- */
 * {
     box-sizing: border-box;
 }
@@ -17,8 +16,6 @@ a:visited {
     color: inherit;
 }
 
-/* ------- topo da página ----------- */
-
 .barra-superior { 
     display: flex;
     align-items: center;
@@ -34,9 +31,18 @@ a:visited {
     z-index: 1;
 }
 
+.barra-superior ion-icon {
+    width: 18px;
+    height: 18px;
+}
+
 .icon-instagram {
     width: 20px;
     height: 20px;
+}
+
+.icon-instagram:hover{
+    cursor: pointer;
 }
 
 .separador-vertical {
@@ -50,6 +56,10 @@ a:visited {
 .logo-instagram {
     width: 103px;
     height: 29px;
+}
+
+.logo-instagram:hover {
+    cursor: pointer;
 }
 
 .pesquisar {
@@ -75,10 +85,18 @@ a:visited {
     margin-left: 215px;
 }
 
+.icon-compartilhar:hover {
+    cursor: pointer;
+}
+
 .icon-dm {
     width: 20px;
     height: 20px;
     margin-left: 25px;
+}
+
+.icon-dm:hover {
+    cursor: pointer;
 }
 
 .icon-coracao {
@@ -87,13 +105,19 @@ a:visited {
     margin-left: 25px;
 }
 
+.icon-coracao:hover {
+    cursor: pointer;
+}
+
 .icon-perfil {
     width: 20px;
     height: 20px;
     margin-left: 25px;
 }
 
-/* ------- Conteúdo Geral --------- */
+.icon-perfil:hover {
+    cursor: pointer;
+}
 
 main {
     background-color: #E5E5E5;
@@ -101,8 +125,6 @@ main {
     justify-content: center; 
     margin: auto;
 }
-
-/* ------- Stories --------- */
 
 .stories {
     width: 614px;
@@ -168,9 +190,11 @@ main {
     height: 26px;
 }
 
-/* ------- Conteúdo Principal -------- */
+.setinha:hover {
+    cursor: pointer;
+}
 
-.principais{
+.principais {
     margin-right: 335px;
     height: 1997px;
 }
@@ -189,7 +213,7 @@ main {
     justify-content: space-between;
 }
 
-.username{
+.username {
     width: 614px;
     height: 60px;
     display: flex;
@@ -199,7 +223,7 @@ main {
     border: 1px solid rgb(211, 211, 211)
 }
 
-.username img{
+.username img {
     margin-left: 17px;
 }
 
@@ -207,7 +231,7 @@ main {
     margin-left: 453px;
 }
 
-.username p{
+.username p {
     margin-left: 15px;
     font-weight: 500;
     font-family: Roboto;
@@ -319,6 +343,11 @@ main {
     align-items: center;
     background-color: white;
 }
+.comentario3 ion-icon {
+    font-size: 27px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
 
 input {
     border-top: none;
@@ -363,11 +392,9 @@ button {
     color: #0095F6;
     opacity: 0.6;
     transition: 300ms;
-  }
+}
 
-/* ------- Sidebar ----------- */
-
-.sideBar{
+.sideBar {
     background-color: #E5E5E5;
     position: fixed;
     top: 0;
@@ -439,8 +466,6 @@ button {
     margin-right: 11px;
 }
 
-
-
 .sugestao {
     display: flex;
     font-family: Roboto;
@@ -464,11 +489,12 @@ button {
     font-style: normal;
     font-size: 12px;
     color: #139EF2;
-    margin-left: auto
-    
+    margin-left: auto  
 }
 
-/* ------- copyrights --------- */
+.p2:hover {
+    cursor: pointer;
+}
 
 .infos{
     margin-top: 33px;
@@ -483,9 +509,6 @@ button {
     margin-bottom: 18px;
 }
 
-
-/* ------- Barra Inferior (versão mobile) --------- */
-
 .barra-inferior{
     display: none;
 }
@@ -493,25 +516,33 @@ button {
 /* ------------- mobile ------------ */
 
 @media (max-width: 614px){
-    .sideBar, .separador-vertical, .pesquisar, .icon-dm, .icon-coracao, .icon-perfil, .setinha{
+    .sideBar, .separador-vertical, .pesquisar, .icon-dm, .icon-coracao, .icon-perfil, .setinha {
         display: none;
     }
 
-    .icon-instagram{
-        margin-right: auto;
+    .barra-superior {
+        display: flex;
+        justify-content: center;
+    }
+
+    .barra-superior ion-icon {
+        width: 22px;
+        height: 22px;
+    }
+
+    .icon-instagram {
         margin-left: 22px;
     }
 
-    .icon-compartilhar{
-        margin-left: auto;
-        margin-right: 22px;
+    .logo-instagram {
+        margin-left: 215px;
     }
 
-    .barra-superior{
-        width: 614px;
+    .icon-compartilhar {
+        margin-right: auto;
     }
 
-    .stories{
+    .stories {
         background-color: #E5E5E5;
         height: 121px;
         margin-left: 15px;
@@ -520,53 +551,52 @@ button {
         margin-bottom: auto;
     }
 
-    .username{
+    .username {
+        margin-top: -24px;
         margin-left: 16px;
     }
 
-    .foto{
+    .foto {
         margin-left: 16px;
     }
 
-    .foto3{
+    .foto3 {
         margin-left: 16px;
     }
 
-    .icon-configfoto{
+    .icon-configfoto {
         margin-left: 16px;
     }
 
-    .curtidas{
+    .curtidas {
         margin-left: 16px;
     }
 
-    .barra-inferior{
+    .barra-inferior {
         position: fixed;
         bottom: 0;
         left: 0;
         width: 100%;
-        display: flex;
-       
+        display: flex; 
         align-items: center;
         height: 54px;
         background-color:  #FFFFFF;
         border-top: 1px solid rgb(211, 211, 211);
-
     }
 
-    .icon-casa{
+    .icon-casa {
         margin-left: 20px;
     }
 
-    .icon-lupa{
+    .icon-lupa {
         margin-left: 118px;
     }
 
-    .icon-mais{
+    .icon-mais {
         margin-left: 124px;
     }
 
-    .icon-coracao2{
+    .icon-coracao2 {
         margin-left: 122px;
     }
 
@@ -574,25 +604,25 @@ button {
         margin-left: 122px;
     }
 
-    .comentarios{
+    .comentarios {
         margin-left: 16px;
     }
 
-    input{
+    input {
         margin-left: 16px;
     }
 }
 
 @media (max-width: 935px) {
-    .sideBar{
+    .sideBar {
         display: none;
     }
 
-    .barra-superior{
+    .barra-superior {
         width: 935px;
     }
 
-    .pesquisar{
+    .pesquisar {
         margin-left: 177px;
     }
 
